# first_pet_project

./: .pylintrc  Dockerfile  README.md  docker-compose.yml  nginx.conf  ngrok.yml  pyproject.toml  pytest.ini  render.yaml  requirements.txt  supervisord.conf  transliteration.py
cart/: cart_session.py  context_processors.py  forms.py  models.py  urls.py  views.py
catalog/: admin.py  forms.py  models.py  recommender.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_initial.py  0003_brand_alter_categorytranslation_description_and_more.py  0004_product_brand.py  0005_remove_category_image_and_more.py  0006_remove_brandtranslation_name_and_more.py  0007_remove_producttranslation_category_product_category_and_more.py  0008_alter_product_brand.py  0009_alter_product_brand_alter_product_category.py  0010_rename_name_categorytranslation__name.py  0011_category_name.py  0012_rename__name_categorytranslation_name_and_more.py  0013_alter_brand_options_alter_brandtranslation_options_and_more.py  0014_alter_categorytranslation_name.py  0015_alter_product_availability.py  0016_review_parent.py  0017_alter_product_brand.py
coupon/: admin.py  models.py  urls.py  views.py
coupon/migrations/: 0001_initial.py  (+2 more)
main_app/: forms.py  models.py  urls.py  views.py
order/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
payment/: tasks.py  urls.py  views.py  webhooks.py
pet_project/: .env  asgi.py  celery.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  test_cart.py  test_catalog.py  test_coupon.py  test_main_app.py  test_order.py  test_payment.py
(+48 files in other folders)
